--- a/src/QuickApp/ClientApp/src/app/components/home/home.component.html
+++ b/src/QuickApp/ClientApp/src/app/components/home/home.component.html
@@ -1,147 +1,9 @@
-<!-- <div class="container">
-    <header class="pageHeader">
-        <h3>
-            <i class="fa fa-tachometer fa-lg page-caption" aria-hidden="true"></i> {{'pageHeader.Dashboard' | translate}}</h3>
-    </header>
+<div *ngIf="!canViewCustomers">
+    <div [@fadeInOut]> У вас нету активних "Элементов"</div>
 
-    <div [@fadeInOut]>
-        <p>List of our controls</p>
-    </div>
-
-    <div class="ui-g-12 ui-md-4">
-        <h3>Icon</h3>
-        <p-calendar [(ngModel)]="date3" [showIcon]="true"></p-calendar> <span style="margin-left:35px">{{date3|date}}</span>
-    </div>
-
-<h3>Buttons</h3>
-
-<fsw-button label="Primary"></fsw-button>
-<fsw-button label="Secondary" severityLevel="secondary"></fsw-button>
-<fsw-button label="Info" severityLevel="info" (click)="showInfo()"></fsw-button>
-<fsw-button label="Danger" severityLevel="danger" (click)="showError()"></fsw-button>
-<fsw-button label="Success" severityLevel="success" (click)="showSuccess()"></fsw-button>
-<fsw-button label="Warning" severityLevel="warning" (click)="showWarn()"></fsw-button>
-
-<h3>Messages</h3>
-<p-messages [(value)]="msgs"></p-messages>
-
-<h3>Inputs</h3>
-
-<!-- <fsw-input-text pKeyFilter="int"
-[(model)]="contract.thirdAgreementNumber"></fsw-input-text> -->
-<!-- <fsw-input-text pKeyFilter="int" placeholder="Integers"></fsw-input-text>
-<fsw-input-text pKeyFilter="alpha" placeholder="Alphabetic"></fsw-input-text>
-
-<h3>Autocomplete</h3>
-
-<fsw-autocomplete [(ngModel)]="model"
-                    [searchMethod]="arr"
-                    placeholder="Hint: type 'v' or 'f'"
-                    emptyMessage="Not Found" ngDefaultControl
-                    (modelChange)="changeValue($event)"></fsw-autocomplete>
-
-<h3>RadioButtons</h3>
-
-<fsw-radio-button [(model)]="radioModel" value="text 1" label="text 1"></fsw-radio-button>
-<fsw-radio-button [(model)]="radioModel" value="text 2" label="text 2"></fsw-radio-button>
-<fsw-radio-button [(model)]="radioModel" value="text 3" label="text 3"></fsw-radio-button>
-
-<h3>Table</h3> -->
-
-<!-- <p-table #dv [value]="kontrahents" [paginator]="true" [rows]="5" [columns]="cols" [style]="{'text-align':'center'}">
-        <ng-template pTemplate="header">
-                <tr>
-                    <th>Повна назва</th>
-                    <th>Номер ГД</th>
-                    <th>Ідентифікаційний код</th>
-                    <th>Управління</th>
-                </tr>
-            </ng-template>
-            <ng-template pTemplate="body" let-kontrahent>
-                <tr>
-                    <td>{{kontrahent.fullName}}</td>
-                    <td>{{kontrahent.number}}</td>
-                    <td>{{kontrahent.identificationCode}}</td>
-                    <td>
-                    <button type="button" class="btn btn-primary" (click)="goEdit(kontrahent.id)">Редактування</button>
-                    <button type="button" class="btn btn-danger" (click)="deleteKontrahent(kontrahent.id)">Видалити</button></td>
-                </tr>
-            </ng-template>
-</p-table> -->
-
-<!-- <h3>TabView</h3>
-
-<p-tabView>
-        <p-tabPanel header="Godfather I" leftIcon="fa-calendar">
-            The story begins as Don Vito Corleone, the head of a New York Mafia family, overseeshis daughter's wedding. His beloved son ichael has just come home from the war, but does not intend to become part of his father's business. T hrough Michael's life the nature of the family business becomes clear. The business of the family is just like the head of the family, kind and benevolent to those who give respect, but given to ruthless violence whenever anything stands against the good of the family.
-        </p-tabPanel>
-        <p-tabPanel header="Godfather II" leftIcon="fa-print">
-            Francis Ford Coppola's legendary continuation and sequel to his landmark 1972 film, The_Godfather parallels the young Vito Corleone's rise with his son Michael's spiritual fall, deepening The_Godfather's depiction of the dark side of the American dream. In the early 1900s, the child Vito flees his Sicilian village for America after the local Mafia kills his family. Vito struggles to make a living, legally or illegally, for his wife and growing brood in Little Italy, killing the local Black Hand Fanucci after he demands his customary cut of the tyro's business. With Fanucci gone, Vito's communal stature grows.
-        </p-tabPanel>
-        <p-tabPanel header="Godfather III" leftIcon="fa-bell-o" rightIcon="fa-bookmark-o">
-            After a break of more than  15 years, director Francis Ford Coppola and writer Mario Puzo returned to the well for this third and final story of the fictional Corleone crime family. Two decades have passed, and crime kingpin Michael Corleone, now divorced from his wife Kay has nearly succeeded in keeping his promise that his family would one day be completely legitimate.
-        </p-tabPanel>
-    </p-tabView>
-
-<h3>Panel</h3>
-<p-panel header="Godfather I" [toggleable]="true" [style]="{'margin-bottom':'20px'}">
-        The story begins as Don Vito Corleone, the head of a New York Mafia family, oversees his daughter's wedding.
-        His beloved son Michael has just come home from the war, but does not intend to become part of his father's business.
-        Through Michael's life the nature of the family business becomes clear. The business of the family is just like the head of the family,
-        kind and benevolent to those who give respect, but given to ruthless violence whenever anything stands against the good of the family.
-    </p-panel>
-
-    <h3>Focus Input</h3>
-    <fsw-input-text pKeyFilter="alpha"
-                    placeholder="Enter username"
-                    pTooltip="Enter your username"
-                    tooltipEvent="focus"
-                    style="margin-left:.5em"
-                    tooltipPosition="bottom"></fsw-input-text>
-
-                    <h3 class="first">Single</h3>
-                    <p-dropdown [options]="cities" [(ngModel)]="selectedCity" placeholder="Select a City" optionLabel="name" [showClear]="true"></p-dropdown>
-                    <p>Selected City: {{selectedCity ? selectedCity.name : 'none'}}</p>
-
-                    <div class="ui-g-12 ui-md-4">
-                        <h3>Icon</h3>
-                        <p-calendar [(ngModel)]="date3" [showIcon]="true"></p-calendar> <span style="margin-left:35px">{{date3|date}}</span>
-                    </div>
-
-</div> -->
-
-<form #createFilmForm="ngForm">
-    <div class="row">
-        <label class="col-sm-3 control-label">Номер</label>
-        <div class="input-group col-lg-4">
-            <span class="input-group-addon">
-                <i class="fa fa-list-ol"></i>
-            </span>
-            <fsw-input-text
-                pKeyFilter="int"
-                [(model)]="options.test1"
-                name="test1"
-                [hasError]="createFilmForm?.form.controls.test1.invalid"
-                [validations]="createFilmForm?.form.controls.test1.errors"></fsw-input-text>
-        </div>
-    </div>
-    <div class="row">
-        <label class="col-sm-3 control-label">ABC</label>
-        <div class="input-group col-lg-4">
-            <span class="input-group-addon">
-                <i class="fa fa-list-ol"></i>
-            </span>
-            <fsw-input-text
-            [(model)]="options.test2"
-            pKeyFilter="alphanum"
-            name="test2"
-            [hasError]="createFilmForm?.form.controls.test2.invalid"
-            [validations]="createFilmForm?.form.controls.test2.errors"></fsw-input-text>
-        </div>
-    </div>
-</form>
-<fsw-button label="Info" severityLevel="info" (click)="onSubmit()"></fsw-button>
-<div class="ui-g-12 ui-md-4">
-        <h3>Icon</h3>
-        <p-calendar [(ngModel)]="date3" [showIcon]="true"></p-calendar> <span style="margin-left:35px">{{date3|date}}</span>
-    </div>
+    <div [@fadeInOut]> У вас есть активные "баги"</div>
+    <a>Перейти к ним</a>
+</div>
+<div *ngIf="canViewCustomers">
+    
+</div>
