--- a/src/QuickApp/ClientApp/src/app/components/app.component.html
+++ b/src/QuickApp/ClientApp/src/app/components/app.component.html
@@ -18,6 +18,7 @@
                 <div *ngIf="isUserLoggedIn" class="app-component collapse navbar-collapse menuItemsContainer">
                     <ul class="app-component nav navbar-nav nav-pills navBarPadding">
                         <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"><a routerLink=""><span class="glyphicon glyphicon-home"></span></a></li>
+                        <li routerLinkActive="active"  *ngIf="!canViewCustomers"><a routerLink="/report">Report</a></li>
                         <li routerLinkActive="active"  *ngIf="canViewCustomers"><a routerLink="/clients">Clients</a></li>
                         <li routerLinkActive="active"  *ngIf="canViewCustomers"><a routerLink="/projects">Projects</a></li>
                     </ul>
