--- a/src/QuickApp/ClientApp/src/app/components/home/home.component.html
+++ b/src/QuickApp/ClientApp/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
     <div [@fadeInOut]> У вас нету активних "Элементов"</div>
 
     <div [@fadeInOut]> У вас есть активные "баги"</div>
-    <a>Перейти к ним</a>
+    <a routerLink="/report">Перейти к ним</a>
 </div>
 <div *ngIf="canViewCustomers">
     dvdf
