--- a/src/QuickApp/ClientApp/src/app/components/view/report/report.component.html
+++ b/src/QuickApp/ClientApp/src/app/components/view/report/report.component.html
@@ -23,7 +23,7 @@
                                 <td>
                                     <div class="row">
                                         <fsw-dropdown 
-                                        [(ngModel)]="report.priority" ngDefaultControl
+                                        [(model)]="report.priority" ngDefaultControl
                                         [options]="priorities"
                                         name="priority"
                                         [hasError]="reportForm?.form.controls.priority.invalid"
